force-app/main/default/objects/KrakenDataTableConfig__c/KrakenDataTableConfig__c.object-meta.xml
<CustomObject>
    <label>Kraken Data Table Config</label>
    <nameField>
        <displayFormat>CONFIG-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kraken Data Table Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>