force-app/main/default/objects/KrakenDataTableConfig__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <label>Display Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>