force-app/main/default/objects/KrakenDataTableConfig__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>