force-app/main/default/objects/KrakenDataTableConfig__c/fields/SelectedFields__c.field-meta.xml
<CustomField>
    <fullName>SelectedFields__c</fullName>
    <label>Selected Fields</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>